--- a/XGBoostPackge.ipynb
+++ b/XGBoostPackge.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -123,17 +123,17 @@
     "            self.params['num_class']=num_class\n",
     "        self.model=[]\n",
     "        \n",
-    "    def fit(X_train, y_train, num_rounds=500, early_stopping_rounds=None):\n",
+    "    def fit(self, X_train, y_train, num_rounds=500, early_stopping_rounds=None):\n",
     "        dtrain = xgb.DMatrix(X_train, label=y_train)\n",
     "        self.model = xgb.train(self.params, dtrain, num_boost_round=num_rounds, early_stopping_rounds=early_stopping_rounds)\n",
     "    \n",
-    "    def predict(X_test):\n",
+    "    def predict(self, X_test):\n",
     "        return self.model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +192,6 @@
      "output_type": "stream",
      "text": [
       "[0]\teval-rmse:0.475282\n",
-      "Will train until eval-rmse hasn't improved in 50 rounds.\n",
       "[1]\teval-rmse:0.451571\n",
       "[2]\teval-rmse:0.429047\n",
       "[3]\teval-rmse:0.407654\n",
@@ -399,10 +398,300 @@
       "[204]\teval-rmse:0.021877\n",
       "[205]\teval-rmse:0.021877\n",
       "[206]\teval-rmse:0.021877\n",
-      "Stopping. Best iteration:\n",
-      "[156]\teval-rmse:0.021873\n",
-      "\n",
-      "-66.2281787762\n"
+      "[207]\teval-rmse:0.021877\n",
+      "[208]\teval-rmse:0.021877\n",
+      "[209]\teval-rmse:0.021877\n",
+      "[210]\teval-rmse:0.021877\n",
+      "[211]\teval-rmse:0.021877\n",
+      "[212]\teval-rmse:0.021877\n",
+      "[213]\teval-rmse:0.021877\n",
+      "[214]\teval-rmse:0.021877\n",
+      "[215]\teval-rmse:0.021877\n",
+      "[216]\teval-rmse:0.021877\n",
+      "[217]\teval-rmse:0.021877\n",
+      "[218]\teval-rmse:0.021877\n",
+      "[219]\teval-rmse:0.021877\n",
+      "[220]\teval-rmse:0.021877\n",
+      "[221]\teval-rmse:0.021877\n",
+      "[222]\teval-rmse:0.021877\n",
+      "[223]\teval-rmse:0.021878\n",
+      "[224]\teval-rmse:0.021877\n",
+      "[225]\teval-rmse:0.021878\n",
+      "[226]\teval-rmse:0.021878\n",
+      "[227]\teval-rmse:0.021878\n",
+      "[228]\teval-rmse:0.021878\n",
+      "[229]\teval-rmse:0.021878\n",
+      "[230]\teval-rmse:0.021878\n",
+      "[231]\teval-rmse:0.021878\n",
+      "[232]\teval-rmse:0.021878\n",
+      "[233]\teval-rmse:0.021879\n",
+      "[234]\teval-rmse:0.021879\n",
+      "[235]\teval-rmse:0.021879\n",
+      "[236]\teval-rmse:0.021879\n",
+      "[237]\teval-rmse:0.021879\n",
+      "[238]\teval-rmse:0.021879\n",
+      "[239]\teval-rmse:0.021879\n",
+      "[240]\teval-rmse:0.021879\n",
+      "[241]\teval-rmse:0.021879\n",
+      "[242]\teval-rmse:0.021879\n",
+      "[243]\teval-rmse:0.021879\n",
+      "[244]\teval-rmse:0.021878\n",
+      "[245]\teval-rmse:0.021879\n",
+      "[246]\teval-rmse:0.021879\n",
+      "[247]\teval-rmse:0.021879\n",
+      "[248]\teval-rmse:0.021879\n",
+      "[249]\teval-rmse:0.02188\n",
+      "[250]\teval-rmse:0.02188\n",
+      "[251]\teval-rmse:0.02188\n",
+      "[252]\teval-rmse:0.02188\n",
+      "[253]\teval-rmse:0.02188\n",
+      "[254]\teval-rmse:0.02188\n",
+      "[255]\teval-rmse:0.02188\n",
+      "[256]\teval-rmse:0.021879\n",
+      "[257]\teval-rmse:0.02188\n",
+      "[258]\teval-rmse:0.021879\n",
+      "[259]\teval-rmse:0.021879\n",
+      "[260]\teval-rmse:0.021879\n",
+      "[261]\teval-rmse:0.021879\n",
+      "[262]\teval-rmse:0.021879\n",
+      "[263]\teval-rmse:0.021879\n",
+      "[264]\teval-rmse:0.021879\n",
+      "[265]\teval-rmse:0.021879\n",
+      "[266]\teval-rmse:0.02188\n",
+      "[267]\teval-rmse:0.02188\n",
+      "[268]\teval-rmse:0.02188\n",
+      "[269]\teval-rmse:0.02188\n",
+      "[270]\teval-rmse:0.02188\n",
+      "[271]\teval-rmse:0.02188\n",
+      "[272]\teval-rmse:0.02188\n",
+      "[273]\teval-rmse:0.02188\n",
+      "[274]\teval-rmse:0.02188\n",
+      "[275]\teval-rmse:0.02188\n",
+      "[276]\teval-rmse:0.02188\n",
+      "[277]\teval-rmse:0.02188\n",
+      "[278]\teval-rmse:0.02188\n",
+      "[279]\teval-rmse:0.021881\n",
+      "[280]\teval-rmse:0.021881\n",
+      "[281]\teval-rmse:0.021881\n",
+      "[282]\teval-rmse:0.021881\n",
+      "[283]\teval-rmse:0.021881\n",
+      "[284]\teval-rmse:0.021881\n",
+      "[285]\teval-rmse:0.021881\n",
+      "[286]\teval-rmse:0.021881\n",
+      "[287]\teval-rmse:0.021881\n",
+      "[288]\teval-rmse:0.021881\n",
+      "[289]\teval-rmse:0.021881\n",
+      "[290]\teval-rmse:0.02188\n",
+      "[291]\teval-rmse:0.021881\n",
+      "[292]\teval-rmse:0.021881\n",
+      "[293]\teval-rmse:0.021881\n",
+      "[294]\teval-rmse:0.021882\n",
+      "[295]\teval-rmse:0.021882\n",
+      "[296]\teval-rmse:0.021882\n",
+      "[297]\teval-rmse:0.021882\n",
+      "[298]\teval-rmse:0.021883\n",
+      "[299]\teval-rmse:0.021884\n",
+      "[300]\teval-rmse:0.021884\n",
+      "[301]\teval-rmse:0.021884\n",
+      "[302]\teval-rmse:0.021884\n",
+      "[303]\teval-rmse:0.021884\n",
+      "[304]\teval-rmse:0.021884\n",
+      "[305]\teval-rmse:0.021884\n",
+      "[306]\teval-rmse:0.021884\n",
+      "[307]\teval-rmse:0.021884\n",
+      "[308]\teval-rmse:0.021884\n",
+      "[309]\teval-rmse:0.021884\n",
+      "[310]\teval-rmse:0.021884\n",
+      "[311]\teval-rmse:0.021884\n",
+      "[312]\teval-rmse:0.021884\n",
+      "[313]\teval-rmse:0.021884\n",
+      "[314]\teval-rmse:0.021884\n",
+      "[315]\teval-rmse:0.021884\n",
+      "[316]\teval-rmse:0.021884\n",
+      "[317]\teval-rmse:0.021884\n",
+      "[318]\teval-rmse:0.021884\n",
+      "[319]\teval-rmse:0.021884\n",
+      "[320]\teval-rmse:0.021884\n",
+      "[321]\teval-rmse:0.021885\n",
+      "[322]\teval-rmse:0.021885\n",
+      "[323]\teval-rmse:0.021884\n",
+      "[324]\teval-rmse:0.021885\n",
+      "[325]\teval-rmse:0.021885\n",
+      "[326]\teval-rmse:0.021885\n",
+      "[327]\teval-rmse:0.021885\n",
+      "[328]\teval-rmse:0.021886\n",
+      "[329]\teval-rmse:0.021886\n",
+      "[330]\teval-rmse:0.021885\n",
+      "[331]\teval-rmse:0.021885\n",
+      "[332]\teval-rmse:0.021885\n",
+      "[333]\teval-rmse:0.021886\n",
+      "[334]\teval-rmse:0.021886\n",
+      "[335]\teval-rmse:0.021886\n",
+      "[336]\teval-rmse:0.021887\n",
+      "[337]\teval-rmse:0.021887\n",
+      "[338]\teval-rmse:0.021886\n",
+      "[339]\teval-rmse:0.021887\n",
+      "[340]\teval-rmse:0.021887\n",
+      "[341]\teval-rmse:0.021886\n",
+      "[342]\teval-rmse:0.021887\n",
+      "[343]\teval-rmse:0.021887\n",
+      "[344]\teval-rmse:0.021887\n",
+      "[345]\teval-rmse:0.021888\n",
+      "[346]\teval-rmse:0.021887\n",
+      "[347]\teval-rmse:0.021888\n",
+      "[348]\teval-rmse:0.021888\n",
+      "[349]\teval-rmse:0.021888\n",
+      "[350]\teval-rmse:0.021889\n",
+      "[351]\teval-rmse:0.021889\n",
+      "[352]\teval-rmse:0.021889\n",
+      "[353]\teval-rmse:0.021888\n",
+      "[354]\teval-rmse:0.021888\n",
+      "[355]\teval-rmse:0.021888\n",
+      "[356]\teval-rmse:0.021888\n",
+      "[357]\teval-rmse:0.021888\n",
+      "[358]\teval-rmse:0.021888\n",
+      "[359]\teval-rmse:0.021888\n",
+      "[360]\teval-rmse:0.021888\n",
+      "[361]\teval-rmse:0.021888\n",
+      "[362]\teval-rmse:0.021888\n",
+      "[363]\teval-rmse:0.021888\n",
+      "[364]\teval-rmse:0.021889\n",
+      "[365]\teval-rmse:0.021889\n",
+      "[366]\teval-rmse:0.021889\n",
+      "[367]\teval-rmse:0.021889\n",
+      "[368]\teval-rmse:0.02189\n",
+      "[369]\teval-rmse:0.02189\n",
+      "[370]\teval-rmse:0.02189\n",
+      "[371]\teval-rmse:0.02189\n",
+      "[372]\teval-rmse:0.02189\n",
+      "[373]\teval-rmse:0.02189\n",
+      "[374]\teval-rmse:0.021891\n",
+      "[375]\teval-rmse:0.021891\n",
+      "[376]\teval-rmse:0.021891\n",
+      "[377]\teval-rmse:0.021891\n",
+      "[378]\teval-rmse:0.021891\n",
+      "[379]\teval-rmse:0.021891\n",
+      "[380]\teval-rmse:0.021891\n",
+      "[381]\teval-rmse:0.021891\n",
+      "[382]\teval-rmse:0.021891\n",
+      "[383]\teval-rmse:0.021891\n",
+      "[384]\teval-rmse:0.021891\n",
+      "[385]\teval-rmse:0.021892\n",
+      "[386]\teval-rmse:0.021892\n",
+      "[387]\teval-rmse:0.021892\n",
+      "[388]\teval-rmse:0.021892\n",
+      "[389]\teval-rmse:0.021892\n",
+      "[390]\teval-rmse:0.021893\n",
+      "[391]\teval-rmse:0.021893\n",
+      "[392]\teval-rmse:0.021893\n",
+      "[393]\teval-rmse:0.021893\n",
+      "[394]\teval-rmse:0.021894\n",
+      "[395]\teval-rmse:0.021894\n",
+      "[396]\teval-rmse:0.021894\n",
+      "[397]\teval-rmse:0.021893\n",
+      "[398]\teval-rmse:0.021894\n",
+      "[399]\teval-rmse:0.021894\n",
+      "[400]\teval-rmse:0.021894\n",
+      "[401]\teval-rmse:0.021894\n",
+      "[402]\teval-rmse:0.021895\n",
+      "[403]\teval-rmse:0.021895\n",
+      "[404]\teval-rmse:0.021895\n",
+      "[405]\teval-rmse:0.021895\n",
+      "[406]\teval-rmse:0.021895\n",
+      "[407]\teval-rmse:0.021895\n",
+      "[408]\teval-rmse:0.021896\n",
+      "[409]\teval-rmse:0.021896\n",
+      "[410]\teval-rmse:0.021896\n",
+      "[411]\teval-rmse:0.021896\n",
+      "[412]\teval-rmse:0.021896\n",
+      "[413]\teval-rmse:0.021896\n",
+      "[414]\teval-rmse:0.021896\n",
+      "[415]\teval-rmse:0.021897\n",
+      "[416]\teval-rmse:0.021897\n",
+      "[417]\teval-rmse:0.021897\n",
+      "[418]\teval-rmse:0.021897\n",
+      "[419]\teval-rmse:0.021897\n",
+      "[420]\teval-rmse:0.021897\n",
+      "[421]\teval-rmse:0.021897\n",
+      "[422]\teval-rmse:0.021897\n",
+      "[423]\teval-rmse:0.021897\n",
+      "[424]\teval-rmse:0.021898\n",
+      "[425]\teval-rmse:0.021897\n",
+      "[426]\teval-rmse:0.021897\n",
+      "[427]\teval-rmse:0.021897\n",
+      "[428]\teval-rmse:0.021897\n",
+      "[429]\teval-rmse:0.021897\n",
+      "[430]\teval-rmse:0.021898\n",
+      "[431]\teval-rmse:0.021898\n",
+      "[432]\teval-rmse:0.021898\n",
+      "[433]\teval-rmse:0.021898\n",
+      "[434]\teval-rmse:0.021898\n",
+      "[435]\teval-rmse:0.021898\n",
+      "[436]\teval-rmse:0.021899\n",
+      "[437]\teval-rmse:0.021898\n",
+      "[438]\teval-rmse:0.021899\n",
+      "[439]\teval-rmse:0.021899\n",
+      "[440]\teval-rmse:0.021899\n",
+      "[441]\teval-rmse:0.021899\n",
+      "[442]\teval-rmse:0.021899\n",
+      "[443]\teval-rmse:0.021899\n",
+      "[444]\teval-rmse:0.021899\n",
+      "[445]\teval-rmse:0.021899\n",
+      "[446]\teval-rmse:0.021899\n",
+      "[447]\teval-rmse:0.021899\n",
+      "[448]\teval-rmse:0.0219\n",
+      "[449]\teval-rmse:0.021899\n",
+      "[450]\teval-rmse:0.021899\n",
+      "[451]\teval-rmse:0.021899\n",
+      "[452]\teval-rmse:0.021899\n",
+      "[453]\teval-rmse:0.021899\n",
+      "[454]\teval-rmse:0.021899\n",
+      "[455]\teval-rmse:0.021899\n",
+      "[456]\teval-rmse:0.021899\n",
+      "[457]\teval-rmse:0.021899\n",
+      "[458]\teval-rmse:0.021899\n",
+      "[459]\teval-rmse:0.021899\n",
+      "[460]\teval-rmse:0.021899\n",
+      "[461]\teval-rmse:0.021899\n",
+      "[462]\teval-rmse:0.021899\n",
+      "[463]\teval-rmse:0.021899\n",
+      "[464]\teval-rmse:0.0219\n",
+      "[465]\teval-rmse:0.0219\n",
+      "[466]\teval-rmse:0.021901\n",
+      "[467]\teval-rmse:0.021901\n",
+      "[468]\teval-rmse:0.021901\n",
+      "[469]\teval-rmse:0.021901\n",
+      "[470]\teval-rmse:0.021901\n",
+      "[471]\teval-rmse:0.021901\n",
+      "[472]\teval-rmse:0.021901\n",
+      "[473]\teval-rmse:0.021901\n",
+      "[474]\teval-rmse:0.021901\n",
+      "[475]\teval-rmse:0.021902\n",
+      "[476]\teval-rmse:0.021902\n",
+      "[477]\teval-rmse:0.021902\n",
+      "[478]\teval-rmse:0.021902\n",
+      "[479]\teval-rmse:0.021902\n",
+      "[480]\teval-rmse:0.021902\n",
+      "[481]\teval-rmse:0.021902\n",
+      "[482]\teval-rmse:0.021902\n",
+      "[483]\teval-rmse:0.021902\n",
+      "[484]\teval-rmse:0.021902\n",
+      "[485]\teval-rmse:0.021902\n",
+      "[486]\teval-rmse:0.021902\n",
+      "[487]\teval-rmse:0.021902\n",
+      "[488]\teval-rmse:0.021902\n",
+      "[489]\teval-rmse:0.021902\n",
+      "[490]\teval-rmse:0.021901\n",
+      "[491]\teval-rmse:0.021901\n",
+      "[492]\teval-rmse:0.0219\n",
+      "[493]\teval-rmse:0.021901\n",
+      "[494]\teval-rmse:0.021901\n",
+      "[495]\teval-rmse:0.021901\n",
+      "[496]\teval-rmse:0.021901\n",
+      "[497]\teval-rmse:0.021901\n",
+      "[498]\teval-rmse:0.021901\n",
+      "[499]\teval-rmse:0.0219\n",
+      "-35.1614692199\n"
      ]
     }
    ],
@@ -413,27 +702,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can not initialize DMatrix from xgbClass",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-0f1925958cf2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mxgbClass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mpred\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr2_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-bf6974e148c2>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(X_train, y_train)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mdtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_boost_round\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_rounds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mearly_stopping_rounds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mearly_stopping_rounds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\xgboost-0.6-py2.7.egg\\xgboost\\core.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, label, missing, weight, silent, feature_names, feature_types)\u001b[0m\n\u001b[0;32m    272\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_init_from_csr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    273\u001b[0m             \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 274\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'can not initialize DMatrix from {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    275\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlabel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    276\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_label\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can not initialize DMatrix from xgbClass"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model=xgbClass()\n",
+    "model=xgbClass(objective='reg:linear', eva_metric='rmse')\n",
     "model.fit(X_train, y_train)\n",
     "pred=model.predict(X_test)\n",
     "print(r2_score(pred, y_test))"
