--- a/XGB starter.ipynb
+++ b/XGB starter.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -691,6 +691,30 @@
     "        cv_scores.append(log_loss(val_y, preds))\n",
     "        print(cv_scores)\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([    0,     1,     2, ..., 49347, 49350, 49351]), array([   24,    32,    38, ..., 49340, 49348, 49349]))\n",
+      "(array([    2,     3,     4, ..., 49349, 49350, 49351]), array([    0,     1,     5, ..., 49336, 49338, 49346]))\n",
+      "(array([    0,     1,     2, ..., 49348, 49349, 49350]), array([    7,    10,    12, ..., 49343, 49344, 49351]))\n",
+      "(array([    0,     1,     2, ..., 49349, 49350, 49351]), array([    3,     4,     6, ..., 49332, 49341, 49347]))\n",
+      "(array([    0,     1,     3, ..., 49348, 49349, 49351]), array([    2,     8,    15, ..., 49337, 49345, 49350]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dev_index, val_index in kf.split(range(train_X.shape[0])):\n",
+    "    print(dev_index, val_index)"
    ]
   },
   {
