--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,26 +4,43 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "#from sklearn.cross_validation import KFold\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.model_selection import KFold, train_test_split, TimeSeriesSplit"
+    "from sklearn.model_selection import KFold, train_test_split, TimeSeriesSplit\n",
+    "from XGBoostPackge import xgbClass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class Ensemble(object):\n",
+    "    #base_models=[model1, model2, model3,...]\n",
     "    def __init__(self, n_folds, stacker, base_models, is_TimeSeries=False):\n",
     "        self.n_folds = n_folds\n",
     "        self.stacker = stacker\n",
@@ -42,6 +59,7 @@
     "            kf=TimeSeriesSplit(n_splits=self.n_folds)\n",
     "        self.S_train = np.zeros((X_train.shape[0], len(self.base_models)))\n",
     "        for i, clf in enumerate(self.base_models):\n",
+    "            #clf=[clfModel for tmp in np.arange(self.n_folds)]\n",
     "            for j, (train_idx, test_idx) in enumerate(kf.split(np.arange(len(X_train)))):\n",
     "                X_CVtrain = X_train[train_idx]\n",
     "                y_CVtrain = y_train[train_idx]\n",
@@ -66,13 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "n=1000\n",
+    "n=100000\n",
     "X=pd.DataFrame(np.random.randn(n,1))\n",
     "y=X.iloc[:,0]+.2*pd.Series(np.random.randn(n))\n",
     "X_train,y_train=X.iloc[:n/2], y.iloc[:n/2]\n",
@@ -84,7 +104,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -100,39 +122,49 @@
     }
    ],
    "source": [
-    "import kagglegym\n",
-    "env = kagglegym.make()\n",
-    "o = env.reset()\n",
-    "excl = [env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
-    "col = [c for c in o.train.columns if c not in excl]\n",
+    "# import kagglegym\n",
+    "# env = kagglegym.make()\n",
+    "# o = env.reset()\n",
+    "# excl = [env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
+    "# col = [c for c in o.train.columns if c not in excl]\n",
     "\n",
-    "O = pd.read_hdf('../input/train.h5')\n",
-    "d_mean= O[col].median(axis=0)\n",
+    "# O = pd.read_hdf('../input/train.h5')\n",
+    "# d_mean= O[col].median(axis=0)\n",
     "\n",
-    "ymean_dict = dict(o.train.groupby([\"id\"])[\"y\"].median())\n",
+    "# ymean_dict = dict(o.train.groupby([\"id\"])[\"y\"].median())\n",
     "\n",
-    "X_train=(O[col])[O.timestamp <= 905]\n",
-    "y_train=O.y[O.timestamp <= 905]\n",
-    "X_test=(O[col])[O.timestamp > 905]\n",
-    "y_test=O.y[O.timestamp > 905]\n",
-    "X_train=X_train.fillna(d_mean)\n",
-    "X_test=X_test.fillna(d_mean)"
+    "# X_train=(O[col])[O.timestamp <= 905]\n",
+    "# y_train=O.y[O.timestamp <= 905]\n",
+    "# X_test=(O[col])[O.timestamp > 905]\n",
+    "# y_test=O.y[O.timestamp > 905]\n",
+    "# X_train=X_train.fillna(d_mean)\n",
+    "# X_test=X_test.fillna(d_mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/scipy/linalg/basic.py:884: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  warnings.warn(mesg, RuntimeWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.96137397581897577"
+       "0.96181450705915361"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,18 +173,23 @@
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "n_folds=5\n",
     "ensembleObj=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=7), \\\n",
-    "                     base_models=[[LinearRegression() for i in np.arange(n_folds)]], is_TimeSeries=False)#,\\\n",
-    "                                  #[Ridge() for i in np.arange(n_folds)]])\n",
+    "                     base_models=[[LinearRegression() for i in np.arange(n_folds)],\\\n",
+    "                                 [Ridge() for i in np.arange(n_folds)],\\\n",
+    "                                 [xgbClass(objective='reg:linear', eva_metric=\"rmse\") for i in np.arange(n_folds)]], \\\n",
+    "                     is_TimeSeries=False)#,\\\n",
     "ensembleObj.fit(X_train=X_train, y_train=y_train)\n",
     "pred=ensembleObj.predict(X_test=X_test)\n",
-    "r2_score(y_test, pred)"
+    "r2_score(y_test, pred)\n",
+    "#0.96163045588344376"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -174,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
